--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     
-    <link rel="icon" href="../pictures/logo14.JPG" type="image/png">
-    <link rel="stylesheet" href="../css/style000.css">
+    <link rel="icon" href="pictures/logo14.JPG" type="image/png">
+    <link rel="stylesheet" href="css/style000.css">
 </head>
 <body>
     <div class="wrapper">
