--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="inner page-title">
+        <div class="inner">
             <h1>Front-End</h1>
         </div>
         <div class="inner">
