--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="inner footer">
             <footer>
-                <p>&copy; JD65</p>
+                <p>&copy; jawodo</p>
             </footer>
         </div>
     </div>
