--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <header>
                 <nav>
                     <section>
-                            <a href="#">HTML</a>
+                            <a href="html/page001.html">HTML</a>
                     </section>
                     <section>
                         <a href="#">CSS</a>
