--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                             <a href="html/page001.html">HTML</a>
                     </section>
                     <section>
-                        <a href="#">CSS</a>
+                        <a href="html/page002.html">CSS</a>
                     </section>
                     <section>
                         <a href="#">JS</a>
