--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a href="html/page002.html">CSS</a>
                     </section>
                     <section>
-                        <a href="#">JS</a>
+                        <a href="html/page003.html">JS</a>
                     </section>
                 </nav>
             </header>
