--- a/html/page003.html
+++ b/html/page003.html
@@ -21,10 +21,12 @@
                 <h2 class="title">Zmienne i stałe</h2>
             </header>
             <article>
-                <p>let firstVariable;</p>
-                <p>let const _firstConstance = 12;</p>
-                <p>firstVariable = 1;</p>
-                <p>$b = firstVariable;</p>
+                <p>let</p>
+                <p>const</p>
+                <p>var</p>
+                <p>camelCase</p>
+                <p>_ $</p>
+                <p>...</p>
             </article>
         </section>   
     </main>
