--- a/html/page003.html
+++ b/html/page003.html
@@ -16,6 +16,32 @@
             </ul>
         </section>
 
+        <section id="intro">
+            <header>
+                <h2 class="intro">Polecenia</h2>
+            </header>
+            <article>
+                <p>JavaScript jest językiem dynamicznie typowanym</p>
+                <p>JavaScript nie posiada typów zmiennych</p>
+                <p>JavaScript posiada typy wartości</p>
+                <p>JavaScript jest case sensitive</p>
+            </article>
+        </section>   
+
+        <section id="commands">
+            <header>
+                <h2 class="commands">Polecenia</h2>
+            </header>
+            <article>
+                <p>console.log("Hello" + "World!");</p>
+                <p>console.warn("Ups", " look!");</p>
+                <p>console.clear();</p>
+                <p>; nie jest wymagany</p>
+                <p></p>
+                <p></p>
+            </article>
+        </section>   
+
         <section id="variables">
             <header>
                 <h2 class="title">Zmienne i stałe</h2>
@@ -27,6 +53,21 @@
                 <p>camelCase</p>
                 <p>_ $</p>
                 <p>...</p>
+            </article>
+        </section>   
+
+        <section id="primitives">
+            <header>
+                <h2 class="primitives">Typy proste</h2>
+            </header>
+            <article>
+                <p>Number</p>
+                <p>10</p>
+                <p>3.1415</p>
+                <p>.99</p>
+                <p>0xf</p>
+                <p>String</p>
+                <p></p>
             </article>
         </section>   
     </main>
