--- a/html/page003.html
+++ b/html/page003.html
@@ -12,13 +12,17 @@
     <main>
          <section>
             <ul>
+                <li><a href="#intro">O języku JavaScript</a></li>
+                <li><a href="#commands">Polecenia</a></li>
                 <li><a href="#variables">Zmienne i stałe</a></li>
+                <li><a href="#primitives">Typy proste</a></li>
+                <li><a href="#">...</a></li>
             </ul>
         </section>
 
         <section id="intro">
             <header>
-                <h2 class="intro">Polecenia</h2>
+                <h2 class="intro">O języku JavaScript</h2>
             </header>
             <article>
                 <p>JavaScript jest językiem dynamicznie typowanym</p>
