--- a/html/page003.html
+++ b/html/page003.html
@@ -22,7 +22,7 @@
 
         <section id="intro">
             <header>
-                <h2 class="intro">O języku JavaScript</h2>
+                <h2 class="title">O języku JavaScript</h2>
             </header>
             <article>
                 <p>JavaScript jest językiem dynamicznie typowanym</p>
@@ -34,7 +34,7 @@
 
         <section id="commands">
             <header>
-                <h2 class="commands">Polecenia</h2>
+                <h2 class="title">Polecenia</h2>
             </header>
             <article>
                 <p>console.log("Hello" + "World!");</p>
@@ -62,7 +62,7 @@
 
         <section id="primitives">
             <header>
-                <h2 class="primitives">Typy proste</h2>
+                <h2 class="title">Typy proste</h2>
             </header>
             <article>
                 <p>Number</p>
