--- a/html/page003.html
+++ b/html/page003.html
@@ -65,13 +65,23 @@
                 <h2 class="title">Typy proste</h2>
             </header>
             <article>
-                <p>Number</p>
+                <p><b>Number</b></p>
                 <p>10</p>
                 <p>3.1415</p>
                 <p>.99</p>
                 <p>0xf</p>
-                <p>String</p>
-                <p></p>
+                <p>Uwaga: 0.1 * 0.2 = 0.020000000000000004</p>
+                <br>
+                <p><b>String (literał znakowy, literał łańcuchowy)</b></p>
+                <p><b>+</b> (konkatenacja)</p>
+                <p>.length (długość)</p>
+                <p>str[0] (pierwszy element)</p>
+                <p>str[str.length - 1] (ostatni element)</p>
+                <p>ą, ć, ę, ł, ń, ó, ś, ź, ż</p>
+                <p>♔ &#9813;&#9814;&#9815;&#9816;&#9817;&#9818;&#9819;&#9820;&#9821;&#9822;&#9823;</p>
+                <p>🐐 🐠</p>
+                <p><b>Literał szablonu </b></p>
+                <p>`Your age is ${yourAge}`</p>
             </article>
         </section>   
     </main>
