Update page002.html, page003.html, style001.css

--- a/html/page002.html
+++ b/html/page002.html
@@ -168,7 +168,7 @@
     
         <section id="cascading">
             <header>
-                <h2 class="title">Kaskadowość (przy remisie wygrywa ostatnia reguła)</h2>
+                <h2 class="title">Kaskadowość</h2>
             </header>
             <article>
                 <ol>
