--- a/html/page003.html
+++ b/html/page003.html
@@ -80,8 +80,12 @@
                 <p>ą, ć, ę, ł, ń, ó, ś, ź, ż</p>
                 <p>♔ &#9813;&#9814;&#9815;&#9816;&#9817;&#9818;&#9819;&#9820;&#9821;&#9822;&#9823;</p>
                 <p>🐐 🐠</p>
+                <br>
                 <p><b>Literał szablonu </b></p>
                 <p>`Your age is ${yourAge}`</p>
+                <br>
+                <p><b>Boolean</b></p>
+                <p></p>
             </article>
         </section>   
     </main>
