--- a/html/page003.html
+++ b/html/page003.html
@@ -85,7 +85,21 @@
                 <p>`Your age is ${yourAge}`</p>
                 <br>
                 <p><b>Boolean</b></p>
-                <p></p>
+                <p>true</p>
+                <p>false</p>
+                <p>&lt; &gt; = &gt= &lt;= == !=</p>
+                <br>
+                <p><b>bigint</b></p>
+                <p>9007199254740992n</p>
+                <br>
+                <p><b>undefined</b></p>
+                <p>Nigdy nie przypisujemy tej wartości zmiennej. Zmienna posiada wartość tego typu, gdy nie przypiszemy jej wartości.</p>
+                <br>
+                <p><b>null</b></p>
+                <p>Przypisujemy, gdy zmienna nie ma mieć wartości</p>
+                <br>
+                <p><b>symbol</b></p>
+                <p>let uniqueSymbol = Symbol();</p>
             </article>
         </section>   
     </main>
