--- a/html/page003.html
+++ b/html/page003.html
@@ -102,6 +102,19 @@
                 <p>let uniqueSymbol = Symbol();</p>
             </article>
         </section>   
+        <section id="objects">
+            <header>
+                <h2 class="title">Obiekty</h2>
+            </header>
+            <article>
+                <p><b>Object</b></p>
+                <p>Notacja literałowa</p>
+                <p>let object =｛</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;property: value,</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;...</p>
+                <p>｝</p>
+            </article>
+        </section>   
     </main>
 </body>
 </html>
