--- a/html/page003.html
+++ b/html/page003.html
@@ -104,7 +104,7 @@
         </section>   
         <section id="objects">
             <header>
-                <h2 class="title">Obiekty</h2>
+                <h2 class="title">Typy złożone</h2>
             </header>
             <article>
                 <p><b>Object</b></p>
@@ -113,6 +113,12 @@
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;property: value,</p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;...</p>
                 <p>｝</p>
+                <br>
+                <p><b>Array</b></p>
+                <p>let arr = [23, "Mark", {}]</p>
+                <p>.length</p>
+                <p>arr[0] (pierwszy element)</p>
+                <p>arr[arr.length - 1] (ostatni element)</p>
             </article>
         </section>   
     </main>
