--- a/html/page002.html
+++ b/html/page002.html
@@ -188,7 +188,7 @@
     
         <section id="flexbox">
             <header>
-                <h2 class="title">Flebox</h2>
+                <h2 class="title">Flexbox</h2>
             </header>
             <article>
                 <h3>container</h3>
