--- a/html/page003.html
+++ b/html/page003.html
@@ -109,10 +109,10 @@
             <article>
                 <p><b>object</b></p>
                 <p>Notacja literałowa</p>
-                <p>let object =｛</p>
+                <p>let object = {</p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;property: value,</p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;...</p>
-                <p>｝</p>
+                <p>}</p>
                 <br>
                 <p><b>array</b></p>
                 <p>let arr = [23, "Mark", {a:12}]</p>
@@ -126,10 +126,48 @@
                 <h2 class="title">NaN</h2>
             </header>
             <article>
-                <p><b>NaN</b></p>
                 <p>NaN to specjalna wartość, nie jest typem danych</p>
                 <p>let a = Math.sqrt(-3)</p>
                 <p>isNaN(a) // true</p>
+            </article>
+        </section>   
+        <section id="if">
+            <header>
+                <h2 class="title">if loop</h2>
+            </header>
+            <article>
+                <p>if (true) {</p>
+                <p>...</p>
+                <p>}</p>
+                <br>
+                <p>if (true) {</p>
+                <p>...</p>
+                <p>} else {</p>
+                <p>...</p>    
+                <p>}</p>    
+                <br>
+                <p>if (true) {</p>
+                <p>...</p>
+                <p>} else if {</p>
+                <p>...</p>    
+                <p>}</p>    
+            </article>
+        </section>   
+        <section id="switch">
+            <header>
+                <h2 class="title">switch</h2>
+            </header>
+            <article>
+                <p>switch (key)</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;case1 value: </p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;break;</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;case2 value: </p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;break;</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;...</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;default:</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;...</p>
             </article>
         </section>   
     </main>
