--- a/html/page003.html
+++ b/html/page003.html
@@ -133,7 +133,7 @@
         </section>   
         <section id="if">
             <header>
-                <h2 class="title">if loop</h2>
+                <h2 class="title">if</h2>
             </header>
             <article>
                 <p>if (true) {</p>
@@ -159,15 +159,19 @@
             </header>
             <article>
                 <p>switch (key)</p>
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;case1 value: </p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;case value: </p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;...</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;case value: </p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...</p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;break;</p>
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;case2 value: </p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;case value: </p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;...</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;case value: </p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...</p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;break;</p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;...</p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;default:</p>
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;...</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...</p>
             </article>
         </section>   
     </main>
