--- a/html/page003.html
+++ b/html/page003.html
@@ -174,6 +174,19 @@
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...</p>
             </article>
         </section>   
+        <section id="while">
+            <header>
+                <h2 class="title">while</h2>
+            </header>
+            <article>
+                <p>while (true) {</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;...</p>
+                <p>}</p>
+                <br>
+                <p>++</p>
+                <p>--</p>
+            </article>
+        </section>   
     </main>
 </body>
 </html>
