--- a/html/page003.html
+++ b/html/page003.html
@@ -179,12 +179,34 @@
                 <h2 class="title">while</h2>
             </header>
             <article>
-                <p>while (true) {</p>
+                <p>while (condition) {</p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;...</p>
                 <p>}</p>
                 <br>
                 <p>++</p>
                 <p>--</p>
+            </article>
+        </section>   
+        <section id="do while">
+            <header>
+                <h2 class="title">do while</h2>
+            </header>
+            <article>
+                <p>do {</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;...</p>
+                <p>} while (condition)</p>
+                <br>
+            </article>
+        </section>   
+        <section id="for">
+            <header>
+                <h2 class="title">for</h2>
+            </header>
+            <article>
+                <p>for (let i = 0; i < 10; i++) {</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;...</p>
+                <p>}</p>
+                <br>
             </article>
         </section>   
     </main>
