--- a/html/page003.html
+++ b/html/page003.html
@@ -16,7 +16,13 @@
                 <li><a href="#commands">Polecenia</a></li>
                 <li><a href="#variables">Zmienne i stałe</a></li>
                 <li><a href="#primitives">Typy proste</a></li>
-                <li><a href="#">...</a></li>
+                <li><a href="#objects">Objekty</a></li>
+                <li><a href="#nan">NaN</a></li>
+                <li><a href="#if">if</a></li>
+                <li><a href="#switch">switch</a></li>
+                <li><a href="#while">while</a></li>
+                <li><a href="#do-while">do while</a></li>
+                <li><a href="#for">for</a></li>
             </ul>
         </section>
 
@@ -104,7 +110,7 @@
         </section>   
         <section id="objects">
             <header>
-                <h2 class="title">Typy złożone</h2>
+                <h2 class="title">Objekty</h2>
             </header>
             <article>
                 <p><b>object</b></p>
@@ -121,7 +127,7 @@
                 <p>arr[arr.length - 1] (ostatni element)</p>
             </article>
         </section>   
-        <section id="non">
+        <section id="nan">
             <header>
                 <h2 class="title">NaN</h2>
             </header>
@@ -187,7 +193,7 @@
                 <p>--</p>
             </article>
         </section>   
-        <section id="do while">
+        <section id="do-while">
             <header>
                 <h2 class="title">do while</h2>
             </header>
