--- a/html/page003.html
+++ b/html/page003.html
@@ -57,9 +57,9 @@
                 <h2 class="title">Zmienne i stałe</h2>
             </header>
             <article>
-                <p>let</p>
-                <p>const</p>
-                <p>var</p>
+                <p>let (zasięg blokowy)</p>
+                <p>const (zasięg blokowy)</p>
+                <p>var (zasięg funkcyjny, dopuszczalne wielokrotne deklaracje tej samej zmiennej)</p>
                 <p>camelCase</p>
                 <p>_ $</p>
                 <p>...</p>
