--- a/html/page003.html
+++ b/html/page003.html
@@ -189,8 +189,6 @@
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;...</p>
                 <p>}</p>
                 <br>
-                <p>++</p>
-                <p>--</p>
             </article>
         </section>   
         <section id="do-while">
@@ -213,6 +211,28 @@
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;...</p>
                 <p>}</p>
                 <br>
+            </article>
+        </section>   
+        <section id="operators">
+            <header>
+                <h2 class="title">Operatory</h2>
+            </header>
+            <article>
+                <p><b>Arithmetic Operators</b></p>
+                <p>+ ++ - -- * ** / %</p>
+                <p><b>Assignment Operators</b></p>
+                <p>= += -= *= /= %= **=</p>
+                <p><b>Comparison Operators</b></p>
+                <p>== === != !== > < >= <= ?</p>
+                <p><b>Concatenate Operator</b></p>
+                <p>+</p>
+                <p><b>String Comparison Operators</b></p>
+                <p>== === != !== > < >= <=</p>
+                <p><b>Logical Operators</b></p>
+                <p>&& || !</p>
+                <p><b>Type Operators</b></p>
+                <p>typeof</p>
+                <p>instanceof</p>
             </article>
         </section>   
     </main>
