--- a/html/page003.html
+++ b/html/page003.html
@@ -219,20 +219,49 @@
             </header>
             <article>
                 <p><b>Arithmetic Operators</b></p>
-                <p>+ ++ - -- * ** / %</p>
+                <p>+</p>
+                <p>++</p>
+                <p>-</p>
+                <p>--</p>
+                <p>*</p>
+                <p>**</p>
+                <p>/</p>
+                <p>%</p>
                 <p><b>Assignment Operators</b></p>
-                <p>= += -= *= /= %= **=</p>
+                <p>=</p>
+                <p>+=</p>
+                <p>-=</p>
+                <p>*=</p>
+                <p>/=</p>
+                <p>%=</p>
+                <p>**=</p>
                 <p><b>Comparison Operators</b></p>
-                <p>== === != !== > < >= <= ?</p>
+                <p>==</p>
+                <p>===</p>
+                <p>!=</p>
+                <p>!==</p>
+                <p>&gt;</p>
+                <p>&lt;</p>
+                <p>&gt;=</p>
+                <p>&lt;=</p>
+                <p>?</p>
                 <p><b>Concatenate Operator</b></p>
                 <p>+</p>
                 <p><b>String Comparison Operators</b></p>
-                <p>== === != !== > < >= <=</p>
+                <p>== === != !== &gt; &lt; &gt;= &lt;=</p>
                 <p><b>Logical Operators</b></p>
                 <p>&& || !</p>
                 <p><b>Type Operators</b></p>
                 <p>typeof</p>
                 <p>instanceof</p>
+            </article>
+        </section>   
+        <section id="ternary">
+            <header>
+                <h2 class="title">Ternary Operator</h2>
+            </header>
+            <article>
+                <p>result = condition ? "if_true" : "if_false"</p>
             </article>
         </section>   
     </main>
