--- a/html/page003.html
+++ b/html/page003.html
@@ -213,21 +213,25 @@
                 <br>
             </article>
         </section>   
-        <section id="operators">
+        <section id="arithmetic-operators">
             <header>
-                <h2 class="title">Operatory</h2>
+                <h2 class="title">Arithmetic Operators</h2>
             </header>
             <article>
-                <p><b>Arithmetic Operators</b></p>
                 <p>+</p>
-                <p>++</p>
                 <p>-</p>
-                <p>--</p>
                 <p>*</p>
-                <p>**</p>
                 <p>/</p>
                 <p>%</p>
-                <p><b>Assignment Operators</b></p>
+                <p>**</p>
+            </article>
+        </section>   
+        <section id="assignment-operators">
+            <header>
+                <h2 class="title">Assignment Operators</h2>
+            </header>
+            <article>
+                <p><b></b></p>
                 <p>=</p>
                 <p>+=</p>
                 <p>-=</p>
@@ -235,7 +239,13 @@
                 <p>/=</p>
                 <p>%=</p>
                 <p>**=</p>
-                <p><b>Comparison Operators</b></p>
+            </article>
+        </section>   
+        <section id="comparison-operators">
+            <header>
+                <h2 class="title">Comparison Operators</h2>
+            </header>
+            <article>
                 <p>==</p>
                 <p>===</p>
                 <p>!=</p>
@@ -244,18 +254,79 @@
                 <p>&lt;</p>
                 <p>&gt;=</p>
                 <p>&lt;=</p>
-                <p>?</p>
-                <p><b>Concatenate Operator</b></p>
-                <p>+</p>
-                <p><b>String Comparison Operators</b></p>
-                <p>== === != !== &gt; &lt; &gt;= &lt;=</p>
-                <p><b>Logical Operators</b></p>
-                <p>&& || !</p>
-                <p><b>Type Operators</b></p>
+                <p>?</p>            </article>
+        </section>          
+        <section id="logical-operators">
+            <header>
+                <h2 class="title">Logical Operators</h2>
+            </header>
+            <article>
+                <p>&&</p>
+                <p>||</p>
+                <p>!</p>
+            </article>
+        </section>          
+        <section id="type-operators">
+            <header>
+                <h2 class="title">Type Operators</h2>
+            </header>
+            <article>
                 <p>typeof</p>
                 <p>instanceof</p>
             </article>
-        </section>   
+        </section>          
+        <section id="comma-operator">
+            <header>
+                <h2 class="title">Comma Operator</h2>
+            </header>
+            <article>
+                <p>,</p>
+                <br>
+                <p>let a = 7, b = 10;</p>
+                <br>
+                <p>for(let i = 0, j = 10; i &gt; 20, j > 0; i++, j--)</p>
+            </article>
+        </section>          
+        <section id="unary-operators">
+            <header>
+                <h2 class="title">Unary Operators</h2>
+            </header>
+            <article>
+                <p>n++</p>
+                <p>++n</p>
+                <p>n--</p>
+                <p>--n</p>
+                <p>delete</p>
+                <p>let result = "15" + 20 // "1520"</p>
+                <p>result = +"15" + 20 // 35</p>
+                <p>result = -"15" + 20 // 5</p>
+            </article>
+        </section>          
+        <section id="relational-operators">
+            <header>
+                <h2 class="title">Relational Operators</h2>
+            </header>
+            <article>
+                <p>in</p>
+                <p>instanceof</p>
+            </article>
+        </section>          
+        <section id="typeof-operator">
+            <header>
+                <h2 class="title">Typeof Operator</h2>
+            </header>
+            <article>
+                <p>typeof x</p>
+                <p>"number"</p>
+                <p>"string"</p>
+                <p>"boolean"</p>
+                <p>"object" <s>"array"</s> <s>"null"</s></p>
+                <p>"undefined"</p>
+                <p>"bigint"</p>
+                <p>"symbol"</p>
+                <p>"function"</p>
+            </article>
+        </section>          
         <section id="ternary">
             <header>
                 <h2 class="title">Ternary Operator</h2>
