--- a/html/page003.html
+++ b/html/page003.html
@@ -12,9 +12,9 @@
     <main>
          <section>
             <ul>
-                <li><a href="#intro">O języku JavaScript</a></li>
+                <li><a href="#intro">About JavaScript</a></li>
                 <li><a href="#commands">Commands</a></li>
-                <li><a href="#variables">Variables and Constans</a></li>
+                <li><a href="#variables">Variables and Constants</a></li>
                 <li><a href="#primitives">Primitives</a></li>
                 <li><a href="#objects">Objects</a></li>
                 <li><a href="#nan">NaN</a></li>
@@ -64,7 +64,7 @@
 
         <section id="variables">
             <header>
-                <h2 class="title">Variables and Constans</h2>
+                <h2 class="title">Variables and Constants</h2>
             </header>
             <article>
                 <p>let (block range)</p>
@@ -88,7 +88,7 @@
                 <p>0xf</p>
                 <p>Note: 0.1 * 0.2 = 0.020000000000000004</p>
                 <br>
-                <p><b>string (literał znakowy, literał łańcuchowy)</b></p>
+                <p><b>string (character literal, string literal)</b></p>
                 <p><b>+</b> (concatenation)</p>
                 <p>.length</p>
                 <p>str[0] (first element)</p>
@@ -217,7 +217,7 @@
                 <h2 class="title">for</h2>
             </header>
             <article>
-                <p>for (let i = 0; i < 10; i++) {</p>
+                <p>for (let i = 0; i &lt; 10; i++) {</p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;...</p>
                 <p>}</p>
                 <br>
