--- a/html/page002.html
+++ b/html/page002.html
@@ -14,19 +14,19 @@
             <ul>
                 <li><a href="#css">CSS</a></li>
                 <li><a href="#css-selectors">Selektory CSS</a></li>
-                <li><a href="#css-attribute-selectors">Selektory atrybutów CSS</a></li>
-                <li><a href="#css-properties">Właściwości CSS</a></li>
-                <li><a href="#positioning">Pozycjonowanie</a></li>
-                <li><a href="#pseudoclasses">Pseudoklasy</a></li>
-                <li><a href="#pseudoelements">Pseudoelementy</a></li>
-                <li><a href="#cascading">Kaskadowość</a></li>
+                <li><a href="#css-attribute-selectors">Attribute Selectors</a></li>
+                <li><a href="#css-properties">CSS Properties</a></li>
+                <li><a href="#positioning">Positioning</a></li>
+                <li><a href="#pseudoclasses">Pseudoclasses</a></li>
+                <li><a href="#pseudoelements">Pseudoelements</a></li>
+                <li><a href="#cascading">Cascading</a></li>
                 <li><a href="#flexbox">Flexbox</a></li>
-                <li><a href="#inheritance">Dziedziczenie</a></li>
-                <li><a href="#colors">Kolory</a></li>
-                <li><a href="#units">Jednostki</a></li>
-                <li><a href="#icons">Ikony</a></li>
-                <li><a href="#fonts">Czcionki</a></li>
-                <li><a href="#font-size">Wielkość czcionek</a></li>
+                <li><a href="#inheritance">Inheritance</a></li>
+                <li><a href="#colors">Colors</a></li>
+                <li><a href="#units">Units</a></li>
+                <li><a href="#icons">Icons</a></li>
+                <li><a href="#fonts">Fonts</a></li>
+                <li><a href="#font-size">Font size</a></li>
             </ul>
         </section>
 
@@ -35,26 +35,26 @@
                 <h2 class="title">CSS</h2>
             </header>
             <article>
-                <p>Arkusz stylów to zbiór reguł</p>
-                <p>Reguła to selektor i blok deklaracji</p>
-                <p>Blok deklaracji to pary właściwość : wartość</p>
+                <p>Style Sheet - set of rules</p>
+                <p>Rule - selector + declaration block</p>
+                <p>Declaration block - pairs property : value</p>
             </article>
         </section>
 
         <section id="css-selectors">
             <header>
-                <h2 class="title">Selektory CSS</h2>
+                <h2 class="title">CSS Selectors</h2>
             </header>
             <!-- <p>&lt;a&gt;</p> -->
             <article>
                 <p>tag, #id, .class, []</p>
-                <p><b>ab</b> - wybiera wszystkie elementy będące równocześnie a i b (tag, class, id, data-...)</p>
-                <p><b>a b</b> - wbiera wszystkie elementy b, które sa potomkami przodka a</p>
-                <p><b>a > b</b> - wybiera wszystkie elementy b, które są dziećmi rodzica a</p>
-                <p><b>a + b</b> - wybiera element b, który jest następnym sąsiadem a</p>
-                <p><b>a ~ b</b> - wyiera wszystkie elementy b, które są następnymi sąsiadami a</p>
-                <p><b>a, b</b> - wybiera wszystkie elementy będące a lub b</p>
-                <p><b>*</b> - wybiera wszystkie istniejące elementy (selektor uniwersalny)</p>
+                <p><b>ab</b> - selects all elements that are both a and b (tag, class, id, data-...)</p>
+                <p><b>a b</b> - selects all elements b that are descendants of the ancestor a</p>
+                <p><b>a > b</b> - selects all elements b that are children of the parent a</p>
+                <p><b>a + b</b> - selects the element b, which is the next neighbor of a</p>
+                <p><b>a ~ b</b> - selects all elements b that are next neighbors of a</p>
+                <p><b>a, b</b> - selects all elements that are a or b</p>
+                <p><b>*</b> - selects all existing elements (universal selector)</p>
             </article>
         </section>
     
