--- a/html/page002.html
+++ b/html/page002.html
@@ -77,7 +77,7 @@
     
         <section id="css-properties">
             <header>
-                <h2 class="title">Właściwości CSS</h2>
+                <h2 class="title">CSS Properties</h2>
             </header>
             <article>
                 <p>background (url)</p>
