--- a/html/page002.html
+++ b/html/page002.html
@@ -125,7 +125,7 @@
     
         <section id="positioning">
             <header>
-                <h2 class="title">Pozycjonowanie</h2>    
+                <h2 class="title">Positioning</h2>    
             </header>
             <article>
                 <p>position (relative, absolute)</p>
@@ -138,13 +138,13 @@
     
         <section id="pseudoclasses">
             <header>
-                <h2 class="title">Pseudoklasy</h2>
+                <h2 class="title">Pseudoclasses</h2>
             </header>
-            <article>
-                <p>:active</p>
+            <article class="zebra">
+                <p><a href="page101.html">:active</a></p>
                 <p>:first-child</p>
                 <p>:focus</p>
-                <p>:over</p>
+                <p>:hover</p>
                 <p>:last-child</p>
                 <p>:link</p>
                 <p>:not</p>
